Ajout du système de mise à jour

--- a/src/templates/pages/mainui.html.twig
+++ b/src/templates/pages/mainui.html.twig
@@ -5,9 +5,11 @@
                 <video id="league_header_logo"></video>
                 <div id="league_header_lobbybutton">
                     <video id="league_header_lobbybuttonvideo"></video>
-                    <video id="league_header_lobbybuttonvideo_updateprogressoverlay"></video>
+                    <div id="league_header_lobbybuttonvideo_updateprogressoverlay_container">
+                        <video id="league_header_lobbybuttonvideo_updateprogressoverlay"></video>
+                    </div>
                     <video id="league_header_lobbybuttonvideo_updateprogressborderoverlay"></video>
-                    <div id="league_header_lobbybuttontext">MISE À JOUR...</div>
+                    <div id="league_header_lobbybuttontext">MISE À JOUR</div>
                 </div>
             </div>
 
