Améliorations de l'affichage des notes de patch + date de sortie de l'app

--- a/src/templates/pages/mainui/content/homepage.html.twig
+++ b/src/templates/pages/mainui/content/homepage.html.twig
@@ -7,8 +7,21 @@
 
         <div id="patchnotes">
             <div id="patchnotes_title">NOTES DE PATCH 2.0.0</div>
-            <div id="patchnotes_postdata">INFINITY_54 - <strong>TBD</strong></div>
+            <div id="patchnotes_postdata">INFINITY_54 - <strong>23/02/2023</strong></div>
             <div id="patchnotes_content">
+                <p class="patchnotes_sectiontitle">MISES À JOUR DE MI-PATCH</p>
+                <p>
+                    16/03/2023 : Mise à jour corrective pour l'application
+                    <ul>
+                        <li>Résolution d'une faille de sécurité détectée dans les outils de développement <span style="font-size: 9px;"><em>(ils ne sont pas inclus dans la version de production de toute façon)</em></span></li>
+                        <li>Ajout de la date de sortie du patch 2.0.0, oubliée lors de la sortie.</li>
+                        <li>Amélioration de l'affichage des notes de patch de l'application.</li>
+                        <li>Prise en charge du dépassement de la fenêtre pour les notes de patch.</li>
+                        <li>Correction de la disposition de l'interface du générateur de stuff aléatoire.</li>
+                    </ul>
+                </p>
+                <div class="patchnotes_separator"></div>
+                <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL</p>
                 <p><i class="patchnotes_quotestart"></i> Ouaaaaaaaaaaaaaaaaaaaaah mais que c'est beau ici ! On dirait que le programme a subi un petit lifting. 😁<br />J'ai profité du fait de refaire la quasi-totalité du code pour modifier le fonctionnement du programme, surtout grâce à la nouvelle apparence graphique. Cassiopeia reçoit aussi une petite aide supplémentaire, en raison de son impossibilité à acheter des bottes dans la boutique, ce qui n'était pas encore géré. <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Refonte graphique complète de l'application <span style="font-size: 9px;"><em>(mais ça, j'imagine que vous aviez deviné ! coucou client de LoL 🙂)</em></span></li>
