--- a/src/scss/pages/mainui/content/homepage/patchnotes.scss
+++ b/src/scss/pages/mainui/content/homepage/patchnotes.scss
@@ -1,10 +1,10 @@
 #patchnotes {
-  width: calc(100% - 36px - 36px);;
+  width: 100%;
   margin-top: 24px;
-  margin-left: 36px;
-  margin-right: 36px;
+  padding-left: 36px;
 
   #patchnotes_title {
+    margin-right: 36px;
     font-family: 'Beaufort for LoL';
     font-weight: 700;
     font-size: 26px;
@@ -13,6 +13,7 @@
 
   #patchnotes_postdata {
     margin-top: -5px;
+    margin-right: 36px;
     font-family: 'Spiegel';
     font-size: 13px;
     color: #a09684;
@@ -23,6 +24,32 @@
     font-size: 13px;
     color: #f0e6d2;
     padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 36px;
+    max-height: 533px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #785a28;
+      border-radius: 20px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: #c8aa6e;
+    }
+
+    &::-webkit-scrollbar-thumb:active {
+      background: #463714;
+    }
 
     .patchnotes_quotestart, .patchnotes_quoteend {
       display: inline-block;
@@ -43,6 +70,21 @@
       background-position: center center;
       background-size: 100% 100%;
       background-repeat: no-repeat;
+    }
+
+    .patchnotes_separator {
+      width: 100%;
+      height: 2px;
+      background-color: rgb(36, 44, 54);
+      margin-top: 8px;
+      margin-bottom: 8px;
+    }
+
+    .patchnotes_sectiontitle {
+      font-family: 'Beaufort for LoL';
+      font-weight: 700;
+      font-size: 14px;
+      color: rgb(208, 168, 92);
     }
   }
 }
