Correction de la disposition du générateur de stuff aléatoire

--- a/src/scss/pages/mainui/content/stuffgenerator.scss
+++ b/src/scss/pages/mainui/content/stuffgenerator.scss
@@ -30,8 +30,7 @@
     z-index: 2;
 
     @import "stuffgenerator/header";
-    @import "stuffgenerator/colnames";
-    @import "stuffgenerator/teamlist";
+    @import "stuffgenerator/table";
     @import "stuffgenerator/champselector";
     @import "stuffgenerator/actions";
   }
