Ajout d'un outil de génération de stuff aléatoire pour un seul joueur

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,6 +15,7 @@
 @import "pages/mainui/content/homepage";
 @import "pages/mainui/content/toolselector";
 @import "pages/mainui/content/champlistgenerator";
+@import "pages/mainui/content/solostuffgenerator";
 @import "pages/mainui/content/stuffgenerator";
 @import "pages/settings";
 @import "pages/status_messages";
