--- a/src/scss/pages/mainui/content/stuffgenerator/table/colnames.scss
+++ b/src/scss/pages/mainui/content/stuffgenerator/table/colnames.scss
@@ -1,5 +1,5 @@
 #stuffgenerator_colnames {
-  tr, td {
+  td {
     height: 20px;
 
     #stuffgenerator_colname_runes1, #stuffgenerator_colname_runes2, #stuffgenerator_colname_runes3, #stuffgenerator_colname_stuff, #stuffgenerator_colname_summoners, #stuffgenerator_colname_spell {
