--- a/src/scss/pages/mainui/content/toolselector/toolarea.scss
+++ b/src/scss/pages/mainui/content/toolselector/toolarea.scss
@@ -89,6 +89,18 @@
     background-image: url('../../../../../../img/ui/toolselector/buttons/champlistgenerator/tutorial-hover.png');
   }
 
+  #toolselector_solostuffgenerator_iconcontainer {
+    background-image: url('../../../../../../img/ui/toolselector/buttons/stuffgenerator/battletraining-disabled.png');
+  }
+
+  #toolselector_solostuffgenerator_staticicon {
+    background-image: url('../../../../../../img/ui/toolselector/buttons/stuffgenerator/battletraining-default.png');
+  }
+
+  #toolselector_solostuffgenerator_staticicon:hover {
+    background-image: url('../../../../../../img/ui/toolselector/buttons/stuffgenerator/battletraining-hover.png');
+  }
+
   #toolselector_stuffgenerator_iconcontainer {
     background-image: url('../../../../../../img/ui/toolselector/buttons/stuffgenerator/battletraining-disabled.png');
   }
