--- a/src/templates/pages/mainui.html.twig
+++ b/src/templates/pages/mainui.html.twig
@@ -38,6 +38,7 @@
         {% include "mainui/content/homepage.html.twig" %}
         {% include "mainui/content/toolselector.html.twig" %}
         {% include "mainui/content/champlistgenerator.html.twig" %}
+        {% include "mainui/content/solostuffgenerator.html.twig" %}
         {% include "mainui/content/stuffgenerator.html.twig" %}
     </div>
 
