--- a/src/templates/pages/mainui/content/stuffgenerator.html.twig
+++ b/src/templates/pages/mainui/content/stuffgenerator.html.twig
@@ -5,7 +5,7 @@
             <div id="stuffgenerator_header_returnbutton"></div>
             <div id="stuffgenerator_header_separator"></div>
             <div id="stuffgenerator_header_toolicon"></div>
-            <div id="stuffgenerator_header_toolname">STUFF ALÉATOIRE</div>
+            <div id="stuffgenerator_header_toolname">STUFF ALÉATOIRE (ÉQUIPE)</div>
         </div>
 
         <table id="stuffgenerator_table">
