--- a/src/templates/pages/mainui/content/toolselector.html.twig
+++ b/src/templates/pages/mainui/content/toolselector.html.twig
@@ -16,13 +16,24 @@
             <div id="toolselector_champlistgenerator_summary" class="toolselector_summary">Outil permettant de générer une liste aléatoire de plusieurs champions.</div>
         </div>
 
+        <div id="toolselector_solostuffgenerator" class="toolselector_toolarea">
+            <div id="toolselector_solostuffgenerator_iconcontainer" class="toolselector_iconcontainer">
+                <div id="toolselector_solostuffgenerator_staticicon" class="toolselector_staticmodeicon"></div>
+                <video id="toolselector_solostuffgenerator_animatedicon" class="toolselector_animatedmodeicon"></video>
+            </div>
+
+            <div id="toolselector_solostuffgenerator_toolname" class="toolselector_toolname">GÉNÉRATEUR DE STUFF (SOLO)</div>
+            <div id="toolselector_solostuffgenerator_separator" class="toolselector_separator"></div>
+            <div id="toolselector_solostuffgenerator_summary" class="toolselector_summary">Outil permettant de générer une liste aléatoire de runes et d'objets pour un champion d'une équipe, en fonction de son poste, et de choisir le pouvoir principal de chacun d'entre eux.</div>
+        </div>
+
         <div id="toolselector_stuffgenerator" class="toolselector_toolarea">
             <div id="toolselector_stuffgenerator_iconcontainer" class="toolselector_iconcontainer">
                 <div id="toolselector_stuffgenerator_staticicon" class="toolselector_staticmodeicon"></div>
                 <video id="toolselector_stuffgenerator_animatedicon" class="toolselector_animatedmodeicon"></video>
             </div>
 
-            <div id="toolselector_stuffgenerator_toolname" class="toolselector_toolname">GÉNÉRATEUR DE STUFF</div>
+            <div id="toolselector_stuffgenerator_toolname" class="toolselector_toolname">GÉNÉRATEUR DE STUFF (ÉQUIPE)</div>
             <div id="toolselector_stuffgenerator_separator" class="toolselector_separator"></div>
             <div id="toolselector_stuffgenerator_summary" class="toolselector_summary">Outil permettant de générer une liste aléatoire de runes et d'objets pour chaque champion d'une équipe, en fonction de son poste, et de choisir le pouvoir principal de chacun d'entre eux.</div>
         </div>
