--- a/src/templates/pages/mainui/content/homepage.html.twig
+++ b/src/templates/pages/mainui/content/homepage.html.twig
@@ -6,10 +6,17 @@
         </div>
 
         <div id="patchnotes">
-            <div id="patchnotes_title">NOTES DE PATCH 2.0.0</div>
-            <div id="patchnotes_postdata">INFINITY_54 - <strong>23/02/2023</strong></div>
+            <div id="patchnotes_title">NOTES DE PATCH 2.1.0</div>
+            <div id="patchnotes_postdata">INFINITY_54 - <strong>23/03/2023</strong></div>
             <div id="patchnotes_content">
-                <p class="patchnotes_sectiontitle">MISES À JOUR DE MI-PATCH</p>
+                <p><i class="patchnotes_quotestart"></i> Un mois pile après la sortie de la première version, première mise à jour de l'application pour y ajouter un nouvel outil ! <i class="patchnotes_quoteend"></i></p>
+                <ul>
+                    <li>Création d'un nouvel outil : le générateur de stuff aléatoire solo (même principe que le générateur de stuff aléatoire pour une équipe, mais pour un seul joueur)</li>
+                    <li>Ajout des listes déroulantes de sélection (utilisée pour la sélection du poste dans le générateur de stuff aléatoire solo)</li>
+                </ul>
+                <br />
+                <p><i class="patchnotes_quotestart"></i> Les notes de ce patch sont assez courtes, mais en même temps, pas grand chose à dire de plus. Du coup, pour le moment, je conserve les notes de patch de la version 2.0.0, qui sont disponibles ci-dessous ! <i class="patchnotes_quoteend"></i></p>
+                <p class="patchnotes_sectiontitle">MISES À JOUR DE MI-PATCH (2.0.1)</p>
                 <p>
                     16/03/2023 : Mise à jour corrective pour l'application
                     <ul>
@@ -21,7 +28,7 @@
                     </ul>
                 </p>
                 <div class="patchnotes_separator"></div>
-                <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL</p>
+                <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL (2.0.0)</p>
                 <p><i class="patchnotes_quotestart"></i> Ouaaaaaaaaaaaaaaaaaaaaah mais que c'est beau ici ! On dirait que le programme a subi un petit lifting. 😁<br />J'ai profité du fait de refaire la quasi-totalité du code pour modifier le fonctionnement du programme, surtout grâce à la nouvelle apparence graphique. Cassiopeia reçoit aussi une petite aide supplémentaire, en raison de son impossibilité à acheter des bottes dans la boutique, ce qui n'était pas encore géré. <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Refonte graphique complète de l'application <span style="font-size: 9px;"><em>(mais ça, j'imagine que vous aviez deviné ! coucou client de LoL 🙂)</em></span></li>
