Correction sélection champion vide dans outil génération stuff groupe + nouvelle scrollbar des sélections de champions

--- a/src/scss/pages/mainui/content/solostuffgenerator/champselector.scss
+++ b/src/scss/pages/mainui/content/solostuffgenerator/champselector.scss
@@ -58,6 +58,8 @@
       transform: translate(-50%, -50%);
       z-index: 999;
 
+      @import "../../../../ui/scrollbar";
+
       div {
         flex: 0 0 80px;
         width: 80px;
