--- a/src/templates/pages/mainui/content/homepage.html.twig
+++ b/src/templates/pages/mainui/content/homepage.html.twig
@@ -9,8 +9,16 @@
             <div id="patchnotes_title">NOTES DE PATCH 2.2.0</div>
             <div id="patchnotes_postdata">INFINITY_54 - <strong>06/05/2023</strong></div>
             <div id="patchnotes_content">
-                <p><i class="patchnotes_quotestart"></i> 2 mois après la dernière mise à jour du programme, nouvelle mise à jour, cette fois-ci en vue du prochain tournoi Ultimate Bravery (qui est en cours, si ce message est visible 🥳). Le but de cette mise à jour est surtout de rendre le programme plus pratique à utiliser. <i class="patchnotes_quoteend"></i></p>
+                <p class="patchnotes_sectiontitle">MISES À JOUR DE MI-PATCH</p>
+                <p>
+                    11/06/2023 : Correction d'un bug entraînant une liste vide dans la sélection des champions sur l'outil de génération de stuff d'équipe
+                    <br />
+                    11/06/2023 : Amélioration de l'apparence des scrollbars sur les sélections des champions dans les outils de génération de stuff (solo et équipe)
+                </p>
                 <div class="patchnotes_separator"></div>
+                <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL</p>
+                <p><i class="patchnotes_quotestart"></i> 2 mois après la dernière mise à jour du programme, nouvelle mise à jour, cette fois-ci en vue du prochain tournoi Ultimate Bravery (qui est en cours, si ce message est visible 🥳). Le but de cette mise à jour est surtout de rendre le programme plus pratique à utiliser. <i class="patchnotes_quoteend"></i></p>
+                <br />
                 <p class="patchnotes_sectiontitle">MODIFICATION DU FONCTIONNEMENT DU SYSTÈME DE MISE À JOUR</p>
                 <p>
                     <i class="patchnotes_quotestart"></i> Quand j'ai créé ce programme, le système de mise à jour a été programmé pour s'exécuter au moment où vous arrivez dans la reproduction du client. Le but, c'était de pouvoir utiliser le bruitage et l'animation que vous voyez en haut à gauche du client, à côté du logo du jeu, quand une mise à jour du jeu est disponible. <small>Attention, la suite est un peu plus technique (mais ça reste compréhensible).</small>
