Désactivation des DevTools

--- a/src/templates/pages/mainui/content/homepage.html.twig
+++ b/src/templates/pages/mainui/content/homepage.html.twig
@@ -14,6 +14,8 @@
                     11/06/2023 : Correction d'un bug entraînant une liste vide dans la sélection des champions sur l'outil de génération de stuff d'équipe
                     <br />
                     11/06/2023 : Amélioration de l'apparence des scrollbars sur les sélections des champions dans les outils de génération de stuff (solo et équipe)
+                    <br />
+                    11/06/2023 : Désactivation des outils de développement ayant été oubliés du programme (oupsi 👀)
                 </p>
                 <div class="patchnotes_separator"></div>
                 <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL</p>
