--- a/src/templates/pages/mainui/content/homepage.html.twig
+++ b/src/templates/pages/mainui/content/homepage.html.twig
@@ -16,6 +16,8 @@
                     11/06/2023 : Amélioration de l'apparence des scrollbars sur les sélections des champions dans les outils de génération de stuff (solo et équipe)
                     <br />
                     11/06/2023 : Désactivation des outils de développement ayant été oubliés du programme (oupsi 👀)
+                    <br />
+                    11/06/2023 : Réduction de la taille des champions dans le générateur aléatoire de liste de champions
                 </p>
                 <div class="patchnotes_separator"></div>
                 <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL</p>
