--- a/src/templates/pages/mainui/content/homepage.html.twig
+++ b/src/templates/pages/mainui/content/homepage.html.twig
@@ -22,6 +22,8 @@
                     11/06/2023 : Réduction de la taille des champions dans le générateur aléatoire de liste de champions
                     <br />
                     11/06/2023 : Correction de l'affichage mi-AZERTY mi-QUERTY des touches des spells des champions (notamment le Q et le W, affichés comme Q et Z initialement) dans les outils de génération des stuffs
+                    <br />
+                    11/06/2023 : Correction d'un bug empêchant la génération des stuffs lorsque FiddleSticks est sélectionné comme champion (solo et équipe)
                 </p>
                 <div class="patchnotes_separator"></div>
                 <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL</p>
