--- a/src/templates/pages/mainui/content/homepage.html.twig
+++ b/src/templates/pages/mainui/content/homepage.html.twig
@@ -16,14 +16,16 @@
                     11/06/2023 : Amélioration de l'apparence des scrollbars sur les sélections des champions dans les outils de génération de stuff (solo et équipe)
                     <br />
                     11/06/2023 : Désactivation des outils de développement ayant été oubliés du programme (oupsi 👀)
+                    <br />
+                    11/06/2023 : Correction d'un bug empêchant la génération des stuffs lorsque FiddleSticks est sélectionné comme champion (solo et équipe)
+                    <br />
+                    11/06/2023 : Correction d'un bug empêchant le fonctionnement du bouton "X" (à côté du bouton pour lancer la génération) sur l'outil de génération d'un stuff aléatoire solo
                 </p>
                 <p><i class="patchnotes_quotestart"></i> Suite au second tournoi Ultimate Bravery (le 1er avec le programme), quelques suggestions/propositions/demandes ont été formulées pour améliorer le programme. Ces modifications ont été ajoutées au programme pendant et après cette seconde édition du tournoi. <i class="patchnotes_quoteend"></i></p>
                 <p>
                     11/06/2023 : Réduction de la taille des champions dans le générateur aléatoire de liste de champions
                     <br />
                     11/06/2023 : Correction de l'affichage mi-AZERTY mi-QUERTY des touches des spells des champions (notamment le Q et le W, affichés comme Q et Z initialement) dans les outils de génération des stuffs
-                    <br />
-                    11/06/2023 : Correction d'un bug empêchant la génération des stuffs lorsque FiddleSticks est sélectionné comme champion (solo et équipe)
                 </p>
                 <div class="patchnotes_separator"></div>
                 <p class="patchnotes_sectiontitle">DÉTAIL DU PATCH ORIGINAL</p>
