Mise à jour du statut de l'app pour le bug sur la sélection des derniers champions dans les outils de génération de stuffs

--- a/src/templates/pages/mainui.html.twig
+++ b/src/templates/pages/mainui.html.twig
@@ -11,7 +11,7 @@
             </div>
 
             <div id="league_status_button_container">
-                <div id="league_status_button" class="info"></div>
+                <div id="league_status_button" class="warning"></div>
             </div>
 
             <div id="mainheader_currentpagearrow"></div>
