--- a/src/templates/pages/status_messages.html.twig
+++ b/src/templates/pages/status_messages.html.twig
@@ -2,8 +2,8 @@
     <div id="app_status_messages_topborder"></div>
     <div id="app_status_messages_list">
         <div class="app_status_message">
-            <div class="app_status_message_title">APPLICATION EN BÊTA</div>
-            <div class="app_status_message_content">Le gestionnaire de tournoi Ultimate Bravery a subi une importante refonte (autant graphique que fonctionnelle). Même s'il a été testé, il peut toujours présenter quelques petits problèmes. N'hésitez pas à me les signaler si c'est le cas !</div>
+            <div class="app_status_message_title">PROBLÈMES DANS LA SÉLECTION DES CHAMPIONS</div>
+            <div class="app_status_message_content">Zilean, Zoé et Zyra ne peuvent pas être sélectionnés dans les outils de génération de stuffs. Des limitations techniques empêchent le programme de les gérer dans le cadre de la sélection. Ziggs est également concerné par ce problème, mais pas systématiquement comme pour les 3 autres champions. Une correction est en cours de création, mais prendra du temps.</div>
         </div>
     </div>
 </div>
