--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -30,8 +30,9 @@
                     <li>Agrandissement de la taille de la liste des champions dans les fenêtres de sélections de champions des outils de génération de stuffs (solo et équipe)</li>
                     <li>Augmentation de la largeur du slider permettant de sélectionner le nombre de champions à générer dans l'outil de génération de champions</li>
                     <li>La précédente liste de champions générés par l'outil de génération de champions est réinitialisée quand l'outil est quitté</li>
+                    <li>L'outil de génération de stuff solo est désormais réinitialisé quand il est quitté</li>
                     <!--
-                    <li>Les outils de génération de stuffs (solo et équipe) sont désormais réinitialisés quand ils sont quittés</li>
+                    <li>L'outil de génération de stuff d'équipe est désormais réinitialisé quand il est quitté</li>
                     <li>Ajout d'une barre de recherche dans le sélecteur de champion, permettant de les rechercher plus rapidement</li>
                     -->
                 </ul>
