--- a/src/templates/tools/stuffgenerator.html.twig
+++ b/src/templates/tools/stuffgenerator.html.twig
@@ -231,6 +231,7 @@
             <div id="stuffgenerator_champselector">
                 <div id="stuffgenerator_champselector_header">CHOIX DU CHAMPION</div>
                 <div id="stuffgenerator_champselector_separator"></div>
+                <input type="text" id="stuffgenerator_champselector_search" placeholder="Nom du champion à rechercher" />
                 <div id="stuffgenerator_champselector_content"></div>
             </div>
         </div>
