Augmentation du nombre de champions par défaut dans l'outil de génération d'une liste de champions à 30

--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -33,6 +33,7 @@
                     <li>L'outil de génération de stuff solo est désormais réinitialisé quand il est quitté</li>
                     <li>L'outil de génération de stuff d'équipe est désormais réinitialisé quand il est quitté</li>
                     <li>Ajout d'une barre de recherche dans le sélecteur de champion, permettant de les rechercher plus rapidement</li>
+                    <li>Augmentation du nombre de champions générés par défaut à 30 au lieu de 20 dans l'outil de génération de liste de champions aléatoire</li>
                 </ul>
             </div>
         </div>
