Utilisation du serveur de LeagueStats pour les données et les images via CSP

--- a/src/templates/app.html.twig
+++ b/src/templates/app.html.twig
@@ -3,6 +3,7 @@
   <head>
     <title>Gestionnaire de tournoi Ultimate Bravery</title>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: 'unsafe-inline' 'unsafe-eval' https://leaguestats.infinity54.fr">
   </head>
   <body>
     {% include "startup.html.twig" %}
