--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -7,9 +7,9 @@
 
         <div id="patchnotes">
             <div id="patchnotes_title">NOTES DE PATCH 2.3.0</div>
-            <div id="patchnotes_postdata">INFINITY_54 - <strong>TBD (normalement juin 2023)</strong></div>
+            <div id="patchnotes_postdata">INFINITY_54 - <strong>TBD (normalement juin 2023 (oupsi c'est en retard de deux mois))</strong></div>
             <div id="patchnotes_content">
-                <p><i class="patchnotes_quotestart"></i> Pendant le dernier tournoi Ultimate Bravery (le 11/06/2023), de nombreuses corrections de bugs ont été réalisées, pour les différents problèmes rencontrés au fil de ce dernier. <i class="patchnotes_quoteend"></i></p>
+                <p><i class="patchnotes_quotestart"></i> Quelques corrections de bugs ont été réalisées le 11/06/2023, pour corriger les différents problèmes rencontrés au fil du tournoi Ultimate Bravery du 11/06/2023, première édition utilisant le programme. <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Correction d'un bug entraînant une liste vide dans la sélection des champions sur l'outil de génération de stuff d'équipe</li>
                     <li>Correction d'un bug empêchant la génération des stuffs lorsque FiddleSticks est sélectionné comme champion (solo et équipe)</li>
@@ -17,11 +17,12 @@
                     <li>Amélioration de l'apparence des scrollbars sur les sélections des champions dans les outils de génération de stuff (solo et équipe)</li>
                 </ul>
                 <br />
-                <p><i class="patchnotes_quotestart"></i> Au cours du tournoi, le programme surchargeait en raison de la grande quantité de données à gérer continuellement. Il continuait à fonctionner correctement, mais n'arrivait pas à gérer tous les champions : Ziggs, Zilean, Zoé et Zyra n'étaient donc pas sélectionnables comme membre d'une équipe dans les outils de génération de stuffs. Ce problème a été corrigé. En parallèle, d'autres bugs ont été détectés et corrigés, et quelques améliorations du programme ont été réalisées. <i class="patchnotes_quoteend"></i></p>
+                <p><i class="patchnotes_quotestart"></i> Au cours du tournoi, on a pu remarquer que Ziggs, Zilean, Zoé et Zyra n'étaient pas sélectionnable dans les outils de génération de stuffs. Cela provenait d'une surcharge du programme, dûe à la grande quantité de données à gérer continuellement. Ce problème a été corrigé. En parallèle, d'autres bugs ont été détectés et corrigés. Et quelques améliorations du programme ont été réalisées, notamment l'ajout d'une barre de recherche pour les champions, qu'on m'a demandé quelques fois pendant le précédent tournoi. 😉 <i class="patchnotes_quoteend"></i></p>
                 <ul>
+                    <li>Mise à jour des outils utilisés par l'application</li>
                     <li>Refonte fonctionnelle de l'application, pour permettre de faciliter les prochaines mises à jour et corrections</li>
-                    <li>Intégration des données de League of Legends directement dans les fichiers du programme, afin d'améliorer la réactivité du programme et de le rendre utilisable hors ligne <small>(sauf pour la mise à jour du programme)</small></li>
                     <li>Amélioration de la gestion des données, permettant un démarrage beaucoup plus rapide de l'application</li>
+                    <li>Suppression de traitements intermédiaires pour le chargement des images, rendant l'application plus fluide</li>
                     <li>Correction du survol du bouton "OUTILS", où une animation ne se déclenchait pas</li>
                     <li>Correction d'un problème entraînant l'impossibilité de sélectionner Ziggs, Zilean, Zoé ou Zyra dans le sélecteur de champions</li>
                     <li>Correction de la barre de téléchargement des mises à jour, qui revenait systématiquement à zéro</li>
