Suppression de electron-squirrel-startup

--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -20,6 +20,7 @@
                 <p><i class="patchnotes_quotestart"></i> Au cours du tournoi, on a pu remarquer que Ziggs, Zilean, Zoé et Zyra n'étaient pas sélectionnable dans les outils de génération de stuffs. Cela provenait d'une surcharge du programme, dûe à la grande quantité de données à gérer continuellement. Ce problème a été corrigé. En parallèle, d'autres bugs ont été détectés et corrigés. Et quelques améliorations du programme ont été réalisées, notamment l'ajout d'une barre de recherche pour les champions, qu'on m'a demandé quelques fois pendant le précédent tournoi. 😉 <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Mise à jour des outils utilisés par l'application</li>
+                    <li>Suppression d'outils inutilisés par l'application</li>
                     <li>Refonte fonctionnelle de l'application, pour permettre de faciliter les prochaines mises à jour et corrections</li>
                     <li>Amélioration de la gestion des données, permettant un démarrage beaucoup plus rapide de l'application</li>
                     <li>Suppression de traitements intermédiaires pour le chargement des images, rendant l'application plus fluide</li>
