--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -7,7 +7,7 @@
 
         <div id="patchnotes">
             <div id="patchnotes_title">NOTES DE PATCH 2.3.0</div>
-            <div id="patchnotes_postdata">INFINITY_54 - <strong>TBD (normalement juin 2023 (oupsi c'est en retard de deux mois))</strong></div>
+            <div id="patchnotes_postdata">INFINITY_54 - <strong>06/08/2023</strong></div>
             <div id="patchnotes_content">
                 <p><i class="patchnotes_quotestart"></i> Quelques corrections de bugs ont été réalisées le 11/06/2023, pour corriger les différents problèmes rencontrés au fil du tournoi Ultimate Bravery du 11/06/2023, première édition utilisant le programme. <i class="patchnotes_quoteend"></i></p>
                 <ul>
