--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -6,36 +6,14 @@
         </div>
 
         <div id="patchnotes">
-            <div id="patchnotes_title">NOTES DE PATCH 2.3.0</div>
-            <div id="patchnotes_postdata">INFINITY_54 - <strong>06/08/2023</strong></div>
+            <div id="patchnotes_title">NOTES DE PATCH 2.4.0</div>
+            <div id="patchnotes_postdata">INFINITY_54 - <strong>16/02/2024</strong></div>
             <div id="patchnotes_content">
-                <p><i class="patchnotes_quotestart"></i> Quelques corrections de bugs ont été réalisées le 11/06/2023, pour corriger les différents problèmes rencontrés au fil du tournoi Ultimate Bravery du 11/06/2023, première édition utilisant le programme. <i class="patchnotes_quoteend"></i></p>
+                <p><i class="patchnotes_quotestart"></i> En prévision de nouveaux tournois Ultimate Bravery, l'outil a été mis à jour pour refléter les changements de la saison 14. Quelques autres corrections ont également été apportées. <i class="patchnotes_quoteend"></i></p>
                 <ul>
-                    <li>Correction d'un bug entraînant une liste vide dans la sélection des champions sur l'outil de génération de stuff d'équipe</li>
-                    <li>Correction d'un bug empêchant la génération des stuffs lorsque FiddleSticks est sélectionné comme champion (solo et équipe)</li>
-                    <li>Correction d'un bug empêchant le fonctionnement du bouton pour quitter l'outil de génération d'un stuff aléatoire solo</li>
-                    <li>Amélioration de l'apparence des scrollbars sur les sélections des champions dans les outils de génération de stuff (solo et équipe)</li>
-                </ul>
-                <br />
-                <p><i class="patchnotes_quotestart"></i> Au cours du tournoi, on a pu remarquer que Ziggs, Zilean, Zoé et Zyra n'étaient pas sélectionnable dans les outils de génération de stuffs. Cela provenait d'une surcharge du programme, dûe à la grande quantité de données à gérer continuellement. Ce problème a été corrigé. En parallèle, d'autres bugs ont été détectés et corrigés. Et quelques améliorations du programme ont été réalisées, notamment l'ajout d'une barre de recherche pour les champions, qu'on m'a demandé quelques fois pendant le précédent tournoi. 😉 <i class="patchnotes_quoteend"></i></p>
-                <ul>
-                    <li>Mise à jour des outils utilisés par l'application</li>
-                    <li>Suppression d'outils inutilisés par l'application</li>
-                    <li>Refonte fonctionnelle de l'application, pour permettre de faciliter les prochaines mises à jour et corrections</li>
-                    <li>Amélioration de la gestion des données, permettant un démarrage beaucoup plus rapide de l'application</li>
-                    <li>Suppression de traitements intermédiaires pour le chargement des images, rendant l'application plus fluide</li>
-                    <li>Correction du survol du bouton "OUTILS", où une animation ne se déclenchait pas</li>
-                    <li>Correction d'un problème entraînant l'impossibilité de sélectionner Ziggs, Zilean, Zoé ou Zyra dans le sélecteur de champions</li>
-                    <li>Correction de la barre de téléchargement des mises à jour, qui revenait systématiquement à zéro</li>
-                    <li>Correction d'une erreur de l'application lorsque l'on essaye de remplacer un objet indéterminé dans l'outil de génération d'un stuff solo</li>
-                    <li>Correction d'un problème empêchant le générateur de stuff solo de récupérer le poste du joueur une fois sélectionné</li>
-                    <li>Agrandissement de la taille de la liste des champions dans les fenêtres de sélections de champions des outils de génération de stuffs (solo et équipe)</li>
-                    <li>Augmentation de la largeur du slider permettant de sélectionner le nombre de champions à générer dans l'outil de génération de champions</li>
-                    <li>La précédente liste de champions générés par l'outil de génération de champions est réinitialisée quand l'outil est quitté</li>
-                    <li>L'outil de génération de stuff solo est désormais réinitialisé quand il est quitté</li>
-                    <li>L'outil de génération de stuff d'équipe est désormais réinitialisé quand il est quitté</li>
-                    <li>Ajout d'une barre de recherche dans le sélecteur de champion, permettant de les rechercher plus rapidement</li>
-                    <li>Augmentation du nombre de champions générés par défaut à 30 au lieu de 20 dans l'outil de génération de liste de champions aléatoire</li>
+                    <li>Correction d'une faille de sécurité détectée dans l'application (CVE-2023-26159)</li>
+                    <li>Correction d'un problème empêchant le chargement d'un des polices de l'application (Spiegel), utilisée pour la plupart des textes</li>
+                    <li>Refonte de la génération de stuff pour prendre en compte la disparition des objets mythiques</li>
                 </ul>
             </div>
         </div>
