Retrait des objets mythiques de la génération de stuff

--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -14,6 +14,8 @@
                     <li>Correction d'une faille de sécurité détectée dans l'application (CVE-2023-26159)</li>
                     <li>Correction d'un problème empêchant le chargement d'un des polices de l'application (Spiegel), utilisée pour la plupart des textes</li>
                     <li>Refonte de la génération de stuff pour prendre en compte la disparition des objets mythiques</li>
+                    <li>Refonte de la génération de runes pour prendre en compte les runes statistiques ajoutées et supprimées</li>
+                    <li>Optimisation du code de l'application pour faciliter les prochaines mises à jour</li>
                 </ul>
             </div>
         </div>
