Correction typo dans les notes de patch

--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -12,7 +12,7 @@
                 <p><i class="patchnotes_quotestart"></i> En prévision de nouveaux tournois Ultimate Bravery, l'outil a été mis à jour pour refléter les changements de la saison 14. Quelques autres corrections ont également été apportées. <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Correction d'une faille de sécurité détectée dans l'application (CVE-2023-26159)</li>
-                    <li>Correction d'un problème empêchant le chargement d'un des polices de l'application (Spiegel), utilisée pour la plupart des textes</li>
+                    <li>Correction d'un problème empêchant le chargement d'une des polices de l'application (Spiegel), utilisée pour la plupart des textes</li>
                     <li>Refonte de la génération de stuff pour prendre en compte la disparition des objets mythiques</li>
                     <li>Refonte de la génération de runes pour prendre en compte les runes statistiques ajoutées et supprimées</li>
                 </ul>
