--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -11,6 +11,7 @@
             <div id="patchnotes_content">
                 <p><i class="patchnotes_quotestart"></i> Depuis la sortie de la version 2.4.0, quelques corrections supplémentaires ont été apportées au fil du temps. <i class="patchnotes_quoteend"></i></p>
                 <ul>
+                    <li>30/03/2023 : Modification du lien vers les ressources de LoL utilisées dans le programme</li>
                     <li>26/03/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2024-29180)</li>
                     <li>19/03/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2024-28849)</li>
                     <li>05/03/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2024-27303)</li>
