--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -9,9 +9,11 @@
             <div id="patchnotes_title">NOTES DE PATCH 2.5.0</div>
             <div id="patchnotes_postdata">INFINITY_54 - <strong>TBD</strong></div>
             <div id="patchnotes_content">
-                <p><i class="patchnotes_quotestart"></i> Avec la version 2.5.0, et le second segment de la saison 2024, de nouvelles modifications ont eu lieu pour se conformer aux changements effectués au jeu. <i class="patchnotes_quoteend"></i></p>
+                <p><i class="patchnotes_quotestart"></i> Avec la version 2.5.0, et le second segment de la saison 2024, de nouvelles corrections et modifications ont eu lieu pour se conformer aux changements effectués au jeu. <i class="patchnotes_quoteend"></i></p>
                 <ul>
-                    <li>Correction d'une faille de sécurité détectée dans l'application (CVE-2021-23337)</li>
+                    <li>Finalisation de la correction d'une faille de sécurité détectée dans l'application (CVE-2021-23337)</li>
+                    <li>Correction de la récupération des données concernant les champions au démarrage de l'application</li>
+                    <li>Correction des noms des champions affichés au survol dans les outils</li>
                 </ul>
             </div>
         </div>
