--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -14,6 +14,7 @@
                     <li>Finalisation de la correction d'une faille de sécurité détectée dans l'application (CVE-2021-23337)</li>
                     <li>Correction de la récupération des données concernant les champions au démarrage de l'application</li>
                     <li>Correction des noms des champions affichés au survol dans les outils</li>
+                    <li>Correction d'un bug dans les générateurs de stuff aléatoires, où les champions sélectionnés ne pouvaient plus être récupérés ce qui plantait la génération et le programme</li>
                 </ul>
             </div>
         </div>
