Correction du remplacement manuel d'objet dans le générateur de stuff d'équipe

--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -12,9 +12,11 @@
                 <p><i class="patchnotes_quotestart"></i> Avec la version 2.5.0, et le second segment de la saison 2024, de nouvelles corrections et modifications ont eu lieu pour se conformer aux changements effectués au jeu. <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Finalisation de la correction d'une faille de sécurité détectée dans l'application (CVE-2021-23337)</li>
+                    <li>Suppression des derniers éléments restants concernant les objets mythiques</li>
                     <li>Correction de la récupération des données concernant les champions au démarrage de l'application</li>
                     <li>Correction des noms des champions affichés au survol dans les outils</li>
                     <li>Correction d'un bug dans les générateurs de stuff aléatoires, où les champions sélectionnés ne pouvaient plus être récupérés ce qui plantait la génération et le programme</li>
+                    <li>Correction du remplacement manuel d'objet dans le générateur de stuff d'équipe</li>
                 </ul>
             </div>
         </div>
