Mise à jour des dépendances et de l'URL du DDragon

--- a/src/templates/app.html.twig
+++ b/src/templates/app.html.twig
@@ -3,7 +3,7 @@
   <head>
     <title>Gestionnaire de tournoi Ultimate Bravery</title>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: 'unsafe-inline' 'unsafe-eval' https://ddragon.infinity54.fr">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: 'unsafe-inline' 'unsafe-eval' https://lol.ddragon.infinity54.fr">
   </head>
   <body>
     {% include "startup.html.twig" %}
