--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -11,6 +11,8 @@
             <div id="patchnotes_content">
                 <p><i class="patchnotes_quotestart"></i> Depuis la sortie de la version 2.5.0, quelques corrections ont été apportées au programme. <i class="patchnotes_quoteend"></i></p>
                 <ul>
+                    <li>15/12/2024 : Modification de l'adresse du serveur du Data Dragon, utilisé par le programme</li>
+                    <li>15/12/2024 : Mise à jour des dépendances</li>
                     <li>17/11/2024 : Correction d'une vulnérabilité dans la dépendance du programme</li>
                     <li>25/09/2024 : Correction de multiples vulnérabilités</li>
                     <li>06/09/2024 : Correction d'une vulnérabilité dans le compilateur de programme</li>
