Correction màj auto + application Prettier

--- a/src/renderer/src/css/app.css
+++ b/src/renderer/src/css/app.css
@@ -1,12 +1,12 @@
 /* Dépendences */
-@import "bootstrap";
-@import "tippy.js/dist/tippy.css";
+@import 'bootstrap';
+@import 'tippy.js/dist/tippy.css';
 
 /* Polices */
-@import "fonts/BeaufortForLoL.css";
-@import "fonts/Spiegel.css";
+@import 'fonts/BeaufortForLoL.css';
+@import 'fonts/Spiegel.css';
 
 /* CSS global */
-@import "global.css";
-@import "scrollbar.css";
-@import "tooltips.css";
+@import 'global.css';
+@import 'scrollbar.css';
+@import 'tooltips.css';
